# skill-creator

./: .gitignore  README.md
dashboard/: README.md  drizzle.config.ts  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/uploads/: route.ts
dashboard/app/skills/[name]/: page.tsx
dashboard/app/skills/[name]/evals/[id]/: page.tsx
dashboard/app/skills/[name]/iterations/[n]/: page.tsx
dashboard/components/: diff-view.tsx  expectation-matrix.tsx  per-eval-trajectory.tsx  resource-trajectory.tsx  site-header.tsx  skill-files-card.tsx  skill-md-card.tsx  trajectory-chart-client.tsx  trajectory-chart.tsx
dashboard/components/ui/: badge.tsx  card.tsx  table.tsx
dashboard/lib/: expectation-matrix.ts  format.ts  queries.ts
skills/better-skills/: SKILL.md  pyproject.toml
skills/better-skills/references/: evals-schema.md  manifest-schema.md
skills/better-skills/scripts/: aggregate_benchmark.py  cli.py  config.py  improve_description.py  iterate.py  package_skill.py  run_eval.py  run_functional_eval.py  run_loop.py  upload_dashboard.py  utils.py
skills/skill-creator/: SKILL.md  pyproject.toml
skills/skill-creator/agents/: grader.md
skills/skill-creator/references/: schemas.md
skills/skill-creator/scripts/: aggregate_benchmark.py  cli.py  run_functional_eval.py  upload_dashboard.py
